--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^1.6.0"
+    "async": "^2.6.1",
+    "chalk": "^2.4.1",
+    "cheerio": "^1.0.0-rc.2",
+    "ora": "^3.0.0",
+    "puppeteer": "^1.7.0",
+    "superagent": "^3.8.3"
   }
 }
