--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,6 @@
 registry=https://registry.npm.taobao.org/
 phantomjs_cdnurl=https://npm.taobao.org/mirrors/phantomjs/
 sass_binary_site=https://npm.taobao.org/mirrors/node-sass/
-electron_mirror https://npm.taobao.org/mirrors/electron/=true
+electron_mirror=https://npm.taobao.org/mirrors/electron/=true
+puppeteer_download_host=https://storage.googleapis.com.cnpmjs.org
 package-lock=false
-PUPPETEER_SKIP_CHROMIUM_DOWNLOAD = true
